[metadata]
name = agent-demo
description = "Your friendly agent doing agent stuff"
url = ""
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
